# Kurs_5

./: .gitignore  README.md  func.py  hh_api_config.py  main.py  pyproject.toml  queries.sql  text_.py
api/: abs_class.py  class_hh.py
db/: db_abc_class.py  db_manager.py
