[tool.poetry]
name = "kurs-5"
version = "0.1.0"
description = ""
authors = ["roman <romanchrnkv@gmail.com>"]
readme = "README.md"
packages = [{include = "kurs_5"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
